@@ -1,4 +1,4 @@
-# last modified 2016-08-18 by J. Fox
+# last modified 2016-08-30 by J. Fox
 
 importFrom(Hmisc, rcorr, print.rcorr)
 importFrom(MASS, stepAIC)
@@ -16,7 +16,7 @@ importFrom(stats, coef, complete.cases, cor, dist, formula, kmeans,
     model.matrix, na.omit, p.adjust, pf, pt, qt, quantile, runif, sd, update)
 
 export(assignCluster, Barplot, bin.var, colPercents, DeltaMethod, Dotplot, excel_sheets, Hist, indexplot, KMeans, lineplot, mergeRows, 
-    numSummary, partial.cor, plotDistr, plotMeans, rcorr.adjust, readXL, readSAS, reliability, rowPercents, 
+    numSummary, partial.cor, plotDistr, plotMeans, rcorr.adjust, readXL, readSAS, readStata, reliability, rowPercents, 
     stepwise, summarySandwich, totPercents,
     dgumbel, pgumbel, qgumbel, rgumbel)
 
